@@ -25,6 +25,8 @@ CHANGES IN FLTK 1.1.0b2
 	- Improved the Fl_HelpView table formatting code; now
 	  dynamically sizes the table columns, and supports
 	  COLSPAN.
+	- The FLUID keyboard shortcuts now work as expected
+	  (CTRL-C copies, SHIFT-CTRL-C writes code, etc.)
 
 
 CHANGES IN FLTK 1.1.0b1
